--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <link rel="icon" href="/favicon-16x16.png" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ome2024-ngff-challenge</title>
-  </head>
-  <body id="app"></body>
-  <script type="module" src="/src/main.js"></script>
+
+<head>
+  <link rel="icon" href="/favicon-16x16.png" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>zowser</title>
+</head>
+
+<body id="app"></body>
+<script type="module" src="/src/main.js"></script>
+
 </html>
