--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" href="/favicon-16x16.png" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>zowser</title>
+  <title>Zowser</title>
 </head>
 
 <body id="app"></body>
